# Typer_Smol_Agents

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  setup.py
src/agents/: __init__.py  compare.py  smol_wrapper.py  tiny_wrapper.py
src/examples/: __init__.py  simple_task.py
